[package]
name = "rust-stdin-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pty-process = { version = "*", features = ["async"] }
futures = "0.3.26"
tokio = { version = "1.35.0", features = ["full"] }
pty = "0.2"
libc = "*"
